--- a/servicies.css
+++ b/servicies.css
@@ -1,3 +1,10 @@
+*{
+    margin: 0;
+    padding: 0; 
+    box-sizing: border-box;
+}
+
+
 #secdiv {
     background-color:orangered; 
     padding: 10px; 
@@ -6,8 +13,12 @@
     background-color: white;
 }
 
+#secdiv:hover .btt{
+    opacity: 1;
+}
+
 .btt{
-    display: none;
+    opacity: 0;
 }
 
 #thidiv:hover{
@@ -21,5 +32,19 @@
     background: rgb(12, 12, 12)
 }
 
+#home{
+    text-decoration: none;
+    color: white;
+}
+
+#home:hover{
+color: tomato;
+}
 
 
+img{
+    background-repeat: no-repeat;
+}
+.igm{
+    position: fixed;
+}
