--- a/assigment.css
+++ b/assigment.css
@@ -1,3 +1,197 @@
+*{
+    margin: 0;
+     padding: 0; 
+    box-sizing: border-box;
+}
+
+
 nav{
     text-decoration:none;
+    
+}
+
+
+#home{
+    text-decoration: none;
+    color: white;
+    list-style: none;
+}
+
+#Gallery img{
+    height: 300px;
+    width: 300px;
+    column-gap: 5px;
+    gap: 5px;
+    margin: 5px;
+    text-align: center;
+    grid-row: auto auto;
+}
+
+#Gallery{
+    display:grid;
+    grid-template-columns: auto auto auto ;
+    text-align: center;
+}
+
+.ddedd{
+    padding: 10px;
+    background-color: red;
+    border-radius: 50px;
+    width: 100px;
+    margin-left: 550px;
+}
+
+.ddedd:hover{
+    background-color: white;
+}
+
+#secdiv {
+    background-color:orangered; 
+    padding: 10px; 
+}
+#secdiv:hover{
+    background-color: white;
+}
+
+.dan{
+    padding-left: 50px;
+    border-radius: 50px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    width: 1000px;
+    height: 50px;
+}
+
+.ttrey{
+    padding: 13px;
+    font-size: large;
+    padding-left: 50px;
+    
+}
+
+textarea{
+    border-radius: 50px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    width: 1000px;
+    text-align:left  ;
+}
+
+.button{
+    padding: 10px;
+    background-color: red;
+    border-radius: 50px;
+    width: 100px;
+}
+
+button:hover{
+    background-color: white;
+   
+}
+
+.viv{
+    color:tomato;
+}
+
+.hi:hover{
+    background-color: tomato;
+}
+
+.hi{
+    color: white;
+    background-color: black;
+    height: 50px;
+    width: 150px;
+}
+
+.VEC{
+    color: white;
+    background-color: black;
+    height: 50px;
+    width: 150px;
+    padding-left: 20px;
+}
+
+.VEC:hover{
+    background-color: tomato;
+   
+}
+
+.vvv{
+    display: flex;
+}
+
+.hhh{
+    height: 400px;
+}
+
+.vcvv{
+    font-size: xx-large;
+    
+}   
+.vcv{
+    color: white;
+} 
+
+.vcve{
+    font-size: medium;
+    padding-left: 20px;
+}
+
+#contact{
+    display: flex;
+    justify-content: space-between;
+}
+
+.danv{
+    border-top: 20px thin;
+}
+
+.caro{
+    position: relative;
+    /* width: 100%; */
+    max-width: 100%;
+    overflow: hidden;
+    border-radius: 10px;
+    padding: 20px;
+    height: 80px;
+}
+
+.slides{
+    display: flex;
+    transition: transform 0.5s ease-in-out;
+}
+
+.slide{
+    min-width: 100%;
+    transition: opacity 0.5s ease-in-out;
+}
+
+.prev, .next{
+    position: absolute;
+    top: 90px;
+    transform: translateY(-50%);
+    background-color: rgb(219, 141, 141);
+    color: white;
+    cursor: pointer;
+    border: none;
+    padding: 10px;
+    border-radius: 50px;
+    margin: 10px;
+    
+}
+
+.prev{
+    left: 10px;
+}
+
+.next{
+    right: 10px;
+}
+
+.prev:hover,.next:hover{ 
+    background-color: silver;
+}
+.vvrv{
+    display: flex;
 }
